add other things

--- a/app/src/main/res/layout/activity_inovator_detail.xml
+++ b/app/src/main/res/layout/activity_inovator_detail.xml
@@ -59,7 +59,7 @@
                     android:layout_height="match_parent">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/image_inovator_detail"
+                        android:id="@+id/iv_foto_inovator_detail"
                         android:layout_width="@dimen/_65sdp"
                         android:layout_height="@dimen/_65sdp"
                         android:src="@drawable/dump_image_inovator"
@@ -72,7 +72,7 @@
                         app:layout_constraintVertical_bias="0.257" />
 
                     <TextView
-                        android:id="@+id/nama_inovator_detail"
+                        android:id="@+id/tv_nama_inovator_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
@@ -80,10 +80,10 @@
                         android:text="Wirda Ningsih"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_18sdp"
-                        app:layout_constraintEnd_toEndOf="@id/image_inovator_detail"
+                        app:layout_constraintEnd_toEndOf="@id/iv_foto_inovator_detail"
                         app:layout_constraintHorizontal_bias="0.509"
-                        app:layout_constraintStart_toStartOf="@id/image_inovator_detail"
-                        app:layout_constraintTop_toBottomOf="@id/image_inovator_detail" />
+                        app:layout_constraintStart_toStartOf="@id/iv_foto_inovator_detail"
+                        app:layout_constraintTop_toBottomOf="@id/iv_foto_inovator_detail" />
 
                     <TextView
                         android:id="@+id/email_inovator_detail"
@@ -93,9 +93,9 @@
                         android:text="dummy@gmail.com"
                         android:textColor="@color/gray_text"
                         android:textSize="@dimen/_10sdp"
-                        app:layout_constraintEnd_toEndOf="@id/nama_inovator_detail"
-                        app:layout_constraintStart_toStartOf="@id/nama_inovator_detail"
-                        app:layout_constraintTop_toBottomOf="@id/nama_inovator_detail" />
+                        app:layout_constraintEnd_toEndOf="@id/tv_nama_inovator_detail"
+                        app:layout_constraintStart_toStartOf="@id/tv_nama_inovator_detail"
+                        app:layout_constraintTop_toBottomOf="@id/tv_nama_inovator_detail" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -103,7 +103,7 @@
                 android:id="@+id/cardBio"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_100sdp"
+                android:layout_height="wrap_content"
                 app:cardElevation="@dimen/_1sdp"
                 app:layout_constraintTop_toBottomOf="@id/cardNamaImage">
 
@@ -156,8 +156,8 @@
                         app:layout_constraintTop_toBottomOf="@id/title_card" />
 
                     <TextView
-                        android:id="@+id/ttl_inovator_detail"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_ttl_inovator_detail"
+                        android:layout_width="@dimen/_130sdp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_medium"
                         android:textColor="@color/gray_text"
@@ -174,7 +174,7 @@
                         android:layout_marginTop="@dimen/_3sdp"
                         android:background="@color/background"
                         app:layout_constraintStart_toStartOf="@id/guideline2"
-                        app:layout_constraintTop_toBottomOf="@id/ttl_inovator_detail"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_ttl_inovator_detail"/>
 
                     <TextView
                         android:id="@+id/gd"
@@ -189,7 +189,7 @@
                         app:layout_constraintStart_toStartOf="@id/guideline2"/>
 
                     <TextView
-                        android:id="@+id/gender_inovator_detail"
+                        android:id="@+id/tv_gender_inovator_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/montserrat_medium"
@@ -207,7 +207,7 @@
                         android:layout_marginTop="@dimen/_3sdp"
                         android:background="@color/background"
                         app:layout_constraintStart_toStartOf="@id/guideline2"
-                        app:layout_constraintTop_toBottomOf="@id/gender_inovator_detail"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_gender_inovator_detail"/>
 
                     <TextView
                         android:id="@+id/ad"
@@ -222,8 +222,8 @@
                         app:layout_constraintStart_toStartOf="@id/guideline2"/>
 
                     <TextView
-                        android:id="@+id/alamat_inovator_detail"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_alamat_inovator_detail"
+                        android:layout_width="@dimen/_130sdp"
                         android:layout_height="wrap_content"
                         android:text="Dramaga"
                         android:fontFamily="@font/montserrat_medium"
@@ -240,7 +240,13 @@
                         android:layout_marginTop="@dimen/_3sdp"
                         android:background="@color/background"
                         app:layout_constraintStart_toStartOf="@id/guideline2"
-                        app:layout_constraintTop_toBottomOf="@id/alamat_inovator_detail"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_alamat_inovator_detail"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_10sdp"
+                        android:background="@color/white"
+                        app:layout_constraintTop_toBottomOf="@id/line3"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -306,11 +312,11 @@
                         app:lottie_loop="true" />
 
                     <TextView
-                        android:id="@+id/kategori_inovator_detail"
+                        android:id="@+id/tv_category_inovator_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sfpro"
-                        android:text="Warga Biasa"
+                        android:text="Masyarakat Umum"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_18sdp"
                         app:layout_constraintStart_toStartOf="@id/kt"
